[tool.poetry]
name = "simms"
version = "2.0.0"
description = "Empty MS creation tool"
authors = ["Sphesihle Makhathini <sphemakh@gmail.com>"]
license = "GPL2"
readme = "README.rst"
homepage="https://github.com/radio-astro/simms"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "*"
casatasks = "*"
casatools = "*"

[tool.poetry.scripts]
simms = "simms.core:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
