[project]
name = "simms"
version = "2.0.1"
description = "Empty MS creation tool"
authors = [{name = "Sphesihle Makhathini", email = "sphemakh@gmail.com"}]
license = {text = "GPL2"}
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    # Breakage in handling of system-wide ephem directories in casa 6.6.3 and beyond
    "casatasks>=6.7.0",
    "casatools>=6.7.0",
]

[project.urls]
Homepage = "https://github.com/radio-astro/simms"

[project.scripts]
simms = "simms.core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
